--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.45.1
 streamlit-extras==0.7.1
 bcrypt==4.3.0
 cmake==4.0.2
-dlib==19.24.0
+dlib-bin==19.24.0
 numpy==2.1.3
 opencv-python==4.11.0.86
 python-dotenv==1.1.0
