--- a/enviroment.yml
+++ b/enviroment.yml
@@ -1,24 +1,19 @@
-name: attendity-env
+name: attendity
 channels:
   - defaults
   - conda-forge
-  - anaconda
 dependencies:
-  - python=3.11
+  - python=3.10.17
   - pip
-  - cmake=3.27.9
-  - numpy=2.1.3
-  - pandas=2.2.3
-  - opencv=4.7.0
-  - sqlalchemy=2.0.41
-  - cudatoolkit=11.8 # Match with TensorFlow GPU version
-  - cudnn=8.6.0 # Required by TensorFlow for GPU
   - pip:
       - streamlit==1.45.1
       - streamlit-extras==0.7.1
       - bcrypt==4.3.0
-      - python-dotenv==1.1.0
       - dlib==19.24.0
+      - numpy==2.1.3
+      - opencv-python==4.11.0.86
+      - python-dotenv==1.1.0
+      - sqlalchemy==2.0.41
       - face_recognition==1.3.0
+      - pandas==2.2.3
       - mtcnn==1.0.0
-      - tensorflow==2.19.0
