--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,27 @@
 name: attendity
 channels:
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
   - python=3.10.17
   - pip
+  - numpy=2.1.3
+  - pandas=2.2.3
+  - cmake=4.0.2
+  - bcrypt=4.3.0
+  - python-dotenv=1.1.0
+  - libboost
+  - libblas
+  - liblapack
   - pip:
       - streamlit==1.45.1
       - streamlit-extras==0.7.1
-      - bcrypt==4.3.0
       - dlib==19.24.0
-      - numpy==2.1.3
       - opencv-python==4.11.0.86
-      - python-dotenv==1.1.0
+      - tensorflow==2.19.0
       - sqlalchemy==2.0.41
       - face_recognition==1.3.0
-      - pandas==2.2.3
       - mtcnn==1.0.0
+      - typing-extensions==4.4.0
+      - greenlet==2.0.2
+      - watchdog==2.1.6
