--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - cmake=4.0.2
   - bcrypt=4.3.0
   - python-dotenv=1.1.0
+  - sqlalchemy=2.0.41
   - libboost
   - libblas
   - liblapack
@@ -19,7 +20,6 @@ dependencies:
       - dlib==19.24.0
       - opencv-python==4.11.0.86
       - tensorflow==2.19.0
-      - sqlalchemy==2.0.41
       - face_recognition==1.3.0
       - mtcnn==1.0.0
       - typing-extensions==4.4.0
