--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.10.17
-  - pip
+  - pip=23.3.1
   - numpy=2.1.3
   - pandas=2.2.3
   - cmake=4.0.2
