--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 streamlit==1.45.1
 streamlit-extras==0.7.1
-bcrypt==4.3.0
-cmake==4.0.2
 dlib==19.24.0
-numpy==2.1.3
 opencv-python==4.11.0.86
-python-dotenv==1.1.0
-tensorflow==2.19.0
-sqlalchemy==2.0.41
+tensorflow-cpu==2.19.0
 face_recognition==1.3.0
-pandas==2.2.3
 mtcnn==1.0.0
+sqlalchemy==2.0.41
+greenlet==2.0.2
+watchdog==2.1.6
