--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ dlib==19.24.0
 opencv-python==4.11.0.86
 tensorflow-cpu==2.19.0
 face_recognition==1.3.0
-mtcnn==1.0.0
+mtcnn==0.1.1
+keras==2.19.0
+keras-vggface==0.7
 sqlalchemy==2.0.41
 greenlet==2.0.2
 watchdog==2.1.6
