--- a/environment.yml
+++ b/environment.yml
@@ -3,19 +3,19 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10.17
+  - python=3.10.12
   - pip=23.3.1
-  # Core dependencies via conda
+  # System dependencies
+  - cmake=4.0.2
+  - libboost=1.81.0
+  - libblas=3.9.0
+  - liblapack=3.9.0
+  # Python packages via conda
   - numpy=1.24.3
   - pandas=2.2.3
-  - cmake=4.0.2
   - bcrypt=4.3.0
   - python-dotenv=1.1.0
   - sqlalchemy=2.0.41
-  - libboost
-  - libblas
-  - liblapack
-  # Pip packages
   - pip:
       - streamlit==1.45.1
       - streamlit-extras==0.7.1
@@ -23,9 +23,10 @@ dependencies:
       - opencv-python==4.11.0.86
       - tensorflow-cpu==2.19.0
       - face_recognition==1.3.0
-      - mtcnn==0.1.1
+      - git+https://github.com/ipazc/mtcnn.git # Install directly from GitHub
       - keras==2.19.0
       - keras-vggface==0.7
-      - watchdog==2.1.6
       - greenlet==2.0.2
+      - watchdog==2.1.6
       - typing-extensions==4.4.0
+      - protobuf==3.20.3
