--- a/environment.yml
+++ b/environment.yml
@@ -10,21 +10,22 @@ dependencies:
   - libboost=1.81.0
   - libblas=3.9.0
   - liblapack=3.9.0
-  # Python packages via conda
+  # Core Python packages via conda
   - numpy=1.24.3
   - pandas=2.2.3
   - bcrypt=4.3.0
   - python-dotenv=1.1.0
   - sqlalchemy=2.0.41
+  - keras=2.19.0
+  - tensorflow-cpu=2.19.0
+  # Pip packages
   - pip:
       - streamlit==1.45.1
       - streamlit-extras==0.7.1
       - dlib==19.24.0
       - opencv-python==4.11.0.86
-      - tensorflow-cpu==2.19.0
       - face_recognition==1.3.0
-      - git+https://github.com/ipazc/mtcnn.git # Install directly from GitHub
-      - keras==2.19.0
+      - mtcnn @ git+https://github.com/ipazc/mtcnn.git
       - keras-vggface==0.7
       - greenlet==2.0.2
       - watchdog==2.1.6
