--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
+# Core requirements
 streamlit==1.45.1
 streamlit-extras==0.7.1
-dlib==19.24.0
-opencv-python==4.11.0.86
-tensorflow-cpu==2.19.0
-face_recognition==1.3.0
-mtcnn==0.1.1
-keras==2.19.0
-keras-vggface==0.7
 sqlalchemy==2.0.41
 greenlet==2.0.2
+
+# Face recognition stack
+dlib==19.24.0
+opencv-python==4.11.0.86
+face_recognition==1.3.0
+mtcnn @ git+https://github.com/ipazc/mtcnn.git
+keras==2.19.0
+tensorflow-cpu==2.19.0
+keras-vggface==0.7
+
+# Support packages
 watchdog==2.1.6
+typing-extensions==4.4.0
+protobuf==3.20.3
+python-dotenv==1.1.0
+bcrypt==4.3.0
