--- a/environments.yml
+++ b/environments.yml
@@ -3,11 +3,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  # Python and core dependencies
+  # Core Python
   - python=3.10.18
-  - pip=25.1.1
-  - numpy=1.24.3
-  - pandas=2.2.3
+  - pip=23.3.1
+
+  # Database and ORM (installed via conda)
+  - sqlalchemy=2.0.41
+  - greenlet=2.0.2
 
   # System dependencies
   - cmake=4.0.2
@@ -15,27 +17,27 @@ dependencies:
   - libblas=3.9.0
   - liblapack=3.9.0
 
-  # Database and security
-  - sqlalchemy=2.0.41
-  - greenlet=2.0.2
+  # Core packages
+  - numpy=1.24.3
+  - pandas=2.2.3
   - bcrypt=4.3.0
   - python-dotenv=1.1.0
+  - typing-extensions=4.6.0
 
-  # Streamlit packages
+  # Streamlit stack
   - streamlit=1.45.1
   - streamlit-extras=0.7.1
   - watchdog=2.1.6
 
-  # Computer vision stack
-  - dlib=19.24.0
+  # Computer vision (installed via conda where possible)
   - opencv=4.11.0
+  - dlib=19.24.0
+
+  # Pip packages
   - pip:
-      # Face recognition
       - face_recognition==1.3.0
       - git+https://github.com/ipazc/mtcnn.git
-      - keras-vggface==0.6 # Using compatible version
-
-      # TensorFlow stack
+      - keras-vggface==0.6
       - tensorflow-cpu==2.15.0
       - keras==2.15.0
-      - protobuf==5.27.3 # Required by streamlit-extras
+      - protobuf==5.27.3
