--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 sqlalchemy==2.0.41
 greenlet==2.0.2
 streamlit==1.45.1
-streamlit-extras==0.7.1
+streamlit-extras==0.6.0  
 
 # Database and utilities
 bcrypt==4.3.0
@@ -18,7 +18,7 @@ mtcnn @ git+https://github.com/ipazc/mtcnn.git
 keras-vggface==0.6
 tensorflow-cpu==2.15.0
 keras==2.15.0
-protobuf>=3.20.3,<5.0.0  # Changed from 5.27.3 to be compatible with tensorflow
+protobuf==4.25.3  
 
 # Numerical computing
 numpy==1.24.3
