--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,14 @@ greenlet==2.0.2
 python-dotenv==1.1.0
 watchdog==3.0.0
 
-# Computer Vision (Optimized for Cloud)
+# Computer Vision
 opencv-python-headless==4.11.0.86
 dlib==19.24.2
 face-recognition==1.3.0
 mtcnn @ git+https://github.com/ipazc/mtcnn.git
 keras-vggface==0.6
 
-# ML Stack (Stable Versions)
+# ML Stack
 tensorflow-cpu==2.15.1
 keras==2.15.0
 protobuf==4.25.3
@@ -26,5 +26,5 @@ pandas==2.2.3
 scipy==1.13.0
 
 # Required Dependencies
-pillow==11.2.0
+pillow==11.2.1  # Corrected version (11.2.0 doesn't exist)
 typing-extensions==4.8.0
