--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - watchdog=3.0.0
   - opencv=4.11.0
   - dlib=19.24.0
+  - pip=23.3.2
   - pip:
       - face-recognition==1.3.0
       - mtcnn @ git+https://github.com/ipazc/mtcnn.git
