--- a/environment.yml
+++ b/environment.yml
@@ -3,28 +3,23 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9.18
-  - cmake=3.26.4
-  - boost=1.81.0
-  - openblas=0.3.23
+  - python=3.10.12
+  - pip=23.3.1
+  - cmake=4.0.2
+  - libboost=1.81.0
+  - libblas=3.9.0
   - liblapack=3.9.0
   - numpy=1.24.3
   - pandas=2.2.3
-  - sqlalchemy=2.0.41
-  - greenlet=2.0.2
+  - bcrypt=4.3.0
   - python-dotenv=1.1.0
-  - typing-extensions=4.8.0
-  - streamlit=1.45.1
-  - streamlit-extras=0.6.0
-  - watchdog=3.0.0
-  - opencv=4.11.0
-  - dlib=19.24.0
-  - pip=23.3.2
+  - sqlalchemy=2.0.41
+  - tensorflow-cpu=2.19.0
+  # Pip packages
   - pip:
-      - face-recognition==1.3.0
+      - streamlit==1.45.1
+      - streamlit-extras==0.7.1
+      - dlib==19.24.0
+      - opencv-python==4.11.0.86
+      - face_recognition==1.3.0
       - mtcnn @ git+https://github.com/ipazc/mtcnn.git
-      - keras-vggface==0.6
-      - tensorflow-cpu==2.15.1
-      - keras==2.15.0
-      - protobuf==4.25.3
-      - pillow==11.2.1
