--- a/environment.yml
+++ b/environment.yml
@@ -22,4 +22,4 @@ dependencies:
       - dlib==19.24.0
       - opencv-python==4.11.0.86
       - face_recognition==1.3.0
-      - mtcnn @ git+https://github.com/ipazc/mtcnn.git
+      - mtcnn==0.1.1
