--- a/environment.yml
+++ b/environment.yml
@@ -9,11 +9,11 @@ dependencies:
   - libboost=1.81.0
   - libblas=3.9.0
   - liblapack=3.9.0
+  - sqlalchemy=2.0.41
   - numpy=1.24.3
   - pandas=2.2.3
   - bcrypt=4.3.0
   - python-dotenv=1.1.0
-  - sqlalchemy=2.0.41
   - tensorflow-cpu=2.19.0
   # Pip packages
   - pip:
@@ -21,5 +21,6 @@ dependencies:
       - streamlit-extras==0.7.1
       - dlib==19.24.0
       - opencv-python==4.11.0.86
+      - sqlalchemy==2.0.41
       - face_recognition==1.3.0
       - mtcnn==0.1.1
