--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
+python-dotenv==1.1.0
+bcrypt==4.3.0
+numpy==1.24.3
+pandas==2.2.3
+sqlalchemy==2.0.41
+tensorflow-cpu==2.19.0
 streamlit==1.45.1
 streamlit-extras==0.7.1
 dlib==19.24.0
 opencv-python==4.11.0.86
 face_recognition==1.3.0
 mtcnn==0.1.1
-sqlalchemy==2.0.41
-python-dotenv==1.1.0
-bcrypt==4.3.0
-numpy==1.24.3
-pandas==2.2.3
