--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.44.0
 streamlit-extras==0.6.0
 bcrypt==4.3.0
-numpy>=1.24.3
+numpy==1.24.3
 pandas==2.2.3
 sqlalchemy==2.0.41
 python-dotenv==1.1.0
