--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ pandas==2.2.3
 sqlalchemy==2.0.41
 python-dotenv==1.1.0
 opencv-python==4.11.0.86
+tensorflow==2.12.0
 face_recognition==1.3.0
 mtcnn==0.1.1
