--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ sqlalchemy==2.0.41
 python-dotenv==1.1.0
 opencv-python==4.6.0.66
 dlib==19.24.0
-# tensorflow-cpu==2.12.0
+tensorflow-cpu==2.12.0
 face_recognition==1.3.0
 mtcnn==0.1.1
